fixed elements overflowing due to flex-shrink fixed negative numebr inputs

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+    flex-shrink: 0;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -14,31 +19,36 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
-    gap: 2rem;
     opacity: 1;
+    row-gap: 30px;
 }
 
 .shelf {
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-wrap: wrap;
-    row-gap: 50px;
+    justify-content: flex-start;
+    gap: 50px;
+    padding: 2rem 3rem;
 }
 
 .add-button-container {
-    margin: 2rem 0 0 0;
+    margin: 3rem 0 0 0;
+    display: flex;
+    justify-content: center;
+}
+
+#add-book-button {
+    font-size: 20px;
+    width: clamp(200px, 200px, 200px);
 }
 
 .book {
-    width: 20%;
-    height: 20%;
     padding: 20px;
-    margin-left: 50px;
     background-color: #7fffd4;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -99,8 +109,8 @@ legend {
 #form-container {
     position: fixed;
     top: 20%;
-    width: 40%;
-    height: 60%;
+    width: clamp(300px, 40%, 40%);
+    height: clamp(400px, 60%, 60%);
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -114,10 +124,9 @@ legend {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-sizing: border-box;
     font-weight: 900;
     padding: 20px;
-    width: 50%;
+    width: 80%;
     height: 100%;
     row-gap: 20px;
     z-index: 9;
@@ -134,9 +143,15 @@ legend {
 }
 
 #cancel-button {
+    font-size: 20px;
     background-color: rgb(255, 106, 106);
+    width: 150px;
+    height: 50px;
 }
 
 #confirm-button {
+    font-size: 20px;
     background-color: rgb(106, 255, 106);
+    width: 150px;
+    height: 50px;
 }
